--- a/app-ejb/src/main/webapp/home.xhtml
+++ b/app-ejb/src/main/webapp/home.xhtml
@@ -9,6 +9,7 @@
 
 <h:head>
     <title>Driver Rest UI</title>
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.ico" />
     <!--<h:outputStylesheet library="css" name="style.css"  />-->
     <h:outputStylesheet name="grid/grid.css" library="primefaces" />
     <!-- Bootstrap Core CSS -->
